Fix destination display losing alignment when in use

--- a/src/shared/components/segment-display/segment-display.component.scss
+++ b/src/shared/components/segment-display/segment-display.component.scss
@@ -25,6 +25,7 @@ along with this program.  If not, see <https://www.gnu.org/licenses/>. */
 	height: 30px;
 	margin: 0;
 	text-align: center;
+	vertical-align: top;
 	width: 25px;
 
 	&:last-of-type {
